web/static/css/app.scss
/* Space out content a bit */
body {
	margin-top: 0px;
}

form, ul, table {
  margin-top: 20px;
  margin-bottom: 20px;
}

/* Phoenix flash messages */
.alert:empty { display: none; }

/* Phoenix inline forms in links and buttons */
form.link, form.button {
  display: inline;
}

/* Custom page header */
.header {
  border-bottom: 1px solid #e5e5e5;
}
.logo {
  width: 519px;
  height: 71px;
  display: inline-block;
  margin-bottom: 1em;
  background-image: url("/images/phoenix.png");
  background-size: 519px 71px;
}

/* Everything but the jumbotron gets side spacing for mobile first views */
.header,
.marketing {
  padding-right: 15px;
  padding-left: 15px;
}

/* Customize container */
@media (min-width: 768px) {
  .container {
    max-width: 940px;
  }
}
.container-narrow > hr {
  margin: 30px 0;
}

/* Main marketing message */
.jumbotron {
  text-align: center;
  border-bottom: 1px solid #e5e5e5;
}

/* Supporting marketing content */
.marketing {
  margin: 35px 0;
}

/* Responsive: Portrait tablets and up */
@media screen and (min-width: 768px) {
  /* Remove the padding we set earlier */
  .header,
  .marketing {
    padding-right: 0;
    padding-left: 0;
  }
  /* Space out the masthead */
  .header {
    margin-bottom: 30px;
  }
  /* Remove the bottom border on the jumbotron for visual effect */
  .jumbotron {
    border-bottom: 0;
  }
}

.diatom{
  background-color: #e67f34; 
  width: 320px; 
  height: 136px; 
  display: inline-block;
  background-image: asset_url("diatom.png");
  background-repeat:no-repeat;
  background-position: center; 
  margin: 10px;
}

hr { border-top: 1px solid #452057; }

body {
  background-color: #E5E9EC;
  font-family: 'Open Sans', sans-serif;
}

#entry_body {
  width: 95%;
  height: 100px;
}

#entry_author_name, #entry_title, #entry_email{
	width: 300px;
}

textarea:focus, input[type="text"]:focus, input[type="password"]:focus {
  border-color: rgba(0,0,255,0.3);
  box-shadow: 0 1px 1px rgba(0,0,255,0.3) inset, 0 0 8px rgba(0,0,255,0.3);
  outline: 0 none;
}

.title {
  color: #333;
  font-weight: bold;
  font-size: 23px;
  line-height: 30px;
}

.preview-area {
  margin: 20px;
  .info-message {
    text-align: center;
  }
}

.entry {
  background-color: #ffffff;
  padding: 20px;
  margin-bottom: 30px;

  .span2 {
    width: 100px;

    .author {
      margin-top: 7px;
      text-align: center;
      font-family: Arial, sans-serif;
      font-style: oblique;
      font-weight: bold;
    }
  }
  .span10 {
    width: 740px;

    hr {
      margin-top: 7px;
    }

    .title {
      color: #333;
      font-weight: bold;
      font-size: 23px;
      line-height: 30px;
      text-decoration: none;
      font-style: normal;
    }

    .posted-at {
      margin-top: 5px;
      color: #aaa;
    }

    .body {
      font-size: 15px;
      text-align: justify;
    }

    .twitter-share-button {
      margin-top: 10px;
    }
  }
}

.gravatar {
  border-radius: 50%;
}

.user-details {
  min-width: 200px;
  text-align: right;

  .gravatar {
    display: inline-block;
  }

  .h-separate {
    margin: 0px 10px 0px 8px;
    border-left: 1px solid #E5E9EC;
  }

  a, a:hover {
    text-decoration: none;
  }
}

.user-signin {
  margin: 10px 0;

  a, a:hover {
    text-decoration: none;
  }
}

.signin, .signup, .submit, .account, .about, .error404 {
  background-color: #ffffff;
  padding: 15px 20px 0 20px;
}

.navbar {
  margin-bottom: 20px;

  .container {
    margin-top: 20px;
  }

  .navbar-inner {
    min-height: 80px;
    background: #452057;
    font-style: normal;
    color: #fff;
    font-size: 16px;

    a {
      color: #fff;

      &:hover {
	text-decoration: underline;
      }
    }

    .brand {
      font-weight: bold;
      color: #fff;
      text-decoration: none;
      font-style: normal;
      padding: 10px 20px 10px 0;
    }

    #signout, #account {
      margin-left: 12px;
    }

    .nav > li > a {
      text-shadow: none;
      // font-size: 15px;
      color: #fff;
      font-style: normal;

      &:hover {
	text-decoration: underline;
      }
    }
  }
}

.container {
	width: 940px;
  a {
    color: #452057;
    text-decoration: underline;
    font-style: italic;
  }
  h4 {
    margin-bottom: 0;
  }
  h6 {
    margin-top: 0;
  }
}

.tooltip-inner {
  color: #000000;
  background-color: #ffffff;
}

.tooltip.bottom .tooltip-arrow {
  border-bottom-color: #ffffff;
}

.spinner {
  text-align: center;
}

